# ytdlcb

./: .gitignore  README.md  pre-commit.sh  pyproject.toml  tags  watchclipboard.desktop
images/: ytdlcb.xcf
tests/: test_ytdlcb.py
ytdlcb/: __init__.py  watchclipboard.py
