[tool.poetry]
name = "ytdlcb"
version = "0.1.0"
description = "Watches the clipboard for youtube urls and downloads them: GUI"
authors = ["Chris Allison <chris.charles.allison+ytdlcb@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ccdale/ytdlcb"

[tool.poetry.dependencies]
python = "~3.7"
pyperclip = "^1.8.0"
ccaconfig = "^0.3.8"
PySimpleGUI = "^4.19.0"
pysimpleguiqt = "^0.34.0"
pyside2 = "^5.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
